samples/_failures_safe/1761184917_7c74d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0775a42.c: In function ‘main’:
./samples/SAFE/__tmp_a0775a42.c:177:13: error: expected declaration or statement at end of input
  177 |             printf(" '%s'\n", tokens[j].value);
      |             ^~~~~~
./samples/SAFE/__tmp_a0775a42.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0775a42.c:177:13: error: expected declaration or statement at end of input
